@@ -28,6 +28,10 @@
     <img src="/foo.jpg" />
     <img src="/foo.jpg" />
     <img src="http://site.com/foo.jpg" />
+    <img srcset="http://site.com/foo.jpg 1684w" />
+    <img srcset="http://site.com/foo.jpg 1684w, /abs/foo-medium.jpg 1024w" />
+    <img srcset="/abs/large.jpg 1684w, /abs/medium.jpg 1024w, /abs/small.jpg 640w" />
+    <img srcset="/abs/large.jpg 1684w, /abs/medium.jpg" />
     <input type="submit" src="/abs/foo.jpg" />
     <input type="submit" src="/abs/foo.jpg" />
     <input type="submit" src="/foo.jpg" />
