@@ -28,6 +28,10 @@
     <img src="../foo.jpg" />
     <img src="/foo.jpg" />
     <img src="http://site.com/foo.jpg" />
+    <img srcset="http://site.com/foo.jpg 1684w" />
+    <img srcset="http://site.com/foo.jpg 1684w, foo-medium.jpg 1024w" />
+    <img srcset="large.jpg 1684w, medium.jpg 1024w, small.jpg 640w" />
+    <img srcset="large.jpg 1684w, medium.jpg" />
     <input type="submit" src="foo.jpg" />
     <input type="submit" src="./foo.jpg" />
     <input type="submit" src="../foo.jpg" />
